Bug 53083 - Combining diacritical marks not displayed
Summary: Combining diacritical marks not displayed
Status: RESOLVED FIXED
Alias: None
Product: kcharselect
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Bryce Nesbitt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-01-16 23:12 UTC by mitek
Modified: 2008-09-28 15:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mitek 2003-01-16 23:12:41 UTC
Version:            (using KDE KDE 3.0.99)
Installed from:    Compiled From Sources

The Unicode "Combining diacritical marks" which are used to symbol composition are not shown in KCharselect widget. I think this is due to Qt Unicode support.
When I change the code in paintCell() and draw two characters instead of one, the combining marks are visible but I need display one symbol in addition (below I choose the letter 'w'), because using "Space" places symbols too low.

The change is:
if (((c>0x20cf) && (c<0x20dd)) || (c==0x20e1) || ((c>0x02ff) && (c<0x034f))){
p->drawText( 0, 0, x2, y2, AlignHCenter | AlignVCenter, "w" +QString(QChar(c)) );
}
else
p->drawText( 0, 0, x2, y2, AlignHCenter | AlignVCenter, QString( QChar( c ) ) );
Comment 1 Waldo Bastian 2003-04-15 15:34:58 UTC
Submitted to Qt-bugs, Qt bugreport Nr 20662 
Comment 2 Nicolas Goutte 2005-09-10 17:22:07 UTC
Still the case, as kcharselect, would need to display two characters, which it still do not do. (Perhaps the class of the character should checked and acted upon.)

Have a nice day!
Comment 3 Becheru Petru-Ioan 2007-01-06 13:27:08 UTC
workaround : in the cell of the combining character it should show space character ' ' combined with the combining character, writing only that charcter(without nothing to combine with) will not show anything :)! for example writing the accent should be(as in html &#x0020;&#x0301; <=> <space><accent>)
Comment 4 Daniel Laidig 2008-09-28 15:02:52 UTC
Fixed in r865635, backported in r865637.

http://websvn.kde.org/?view=rev&revision=865635
http://websvn.kde.org/?view=rev&revision=865637