wrap combining diacritical marks in spaces to minimize display errors

BUG:53083

svn path=/trunk/KDE/kdelibs/; revision=865635